--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -219,14 +219,14 @@
   }
 
   #about .bio-image {
-    width: 312px !important;
-    height: 312px !important;
+    width: 250px !important;
+    height: 250px !important;
   }
 
   #about .biography .bio-image img {
     width: 480px !important;
     object-fit: cover !important;
-    object-position: -95px -100px !important;
+    object-position: -125px -120px !important;
   }
 
   #about .biography .bio-text {
@@ -634,14 +634,14 @@
   }
 
   #about .bio-image {
-    width: 312px;
-    height: 312px;
+    width: 312px !important;
+    height: 312px !important;
   }
 
   #about .biography .bio-image img {
     width: 480px;
     object-fit: cover;
-    object-position: -95px -100px;
+    object-position: -100px -120px !important;
   }
 
   #about .biography .bio-text {
@@ -1376,10 +1376,6 @@
     text-align: center;
     margin-bottom: 36px;
   }
-  
-  #hero .hero-text .sm-w-100 {
-    width: 100%;
-  }
 
   #hero .hero-text .btn-hubungi {
     text-align: center;
@@ -1403,11 +1399,11 @@
 
   #hero .hero-banner img {
     /* background: #000; */
-    width: 398px;
+    width: 598px;
     object-position: center;
     object-fit: cover;
     position: absolute;
-    top: 20%;
+    top: 40%;
     left: 50%;
   }
 
@@ -1804,44 +1800,37 @@
   }
 
   /* HERO */
-  #hero .reversing {
-    display: flex;
-    flex-direction: column-reverse !important;
-    /* background-color: red; */
+  #hero {
+    padding: 120px 4px;
   }
 
   #hero .hero-text {
-    margin-top: 60px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+    margin-top: 0;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
   }
 
   #hero .hero-text h1 {
     max-width: 800px;
     line-height: 46px;
-    margin-bottom: 20px;
     font-size: 32px;
-    text-align: center;
+    margin-bottom: 20px;
   }
 
   #hero .hero-text p {
     line-height: 40px;
     max-width: 590px;
     font-size: 20px;
-    text-align: center;
     margin-bottom: 36px;
-  }
-  
-  #hero .hero-text .sm-w-100 {
-    width: 100%;
   }
 
   #hero .hero-text .btn-hubungi {
     text-align: center;
     text-decoration: none;
     color: #fff;
-    width: 60%;
+    width: 50%;
     height: 100%;
     padding: 14px 20px;
     font-size: 18px;
@@ -1854,17 +1843,16 @@
     display: flex;
     justify-content: center;
     position: relative;
-    margin: 100px 0 180px 0;
+    /* margin: 120px 0 180px 0; */
   }
 
   #hero .hero-banner img {
     /* background: #000; */
-    width: 398px;
-    object-position: center;
-    object-fit: cover;
+    width: 340px;
     position: absolute;
-    top: 20%;
+    top: 40%;
     left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   /* Services */
@@ -2189,4 +2177,257 @@
   }
 }
 
+@media screen and (max-width: 1400px) {
+
+  /* Services */
+  #services {
+    padding: 100px 0 50px 0;
+  }
+
+  #services .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: -50px;
+  }
+
+  #services .heading h2 {
+    font-size: 38px;
+  }
+
+  #services .heading p {
+    margin-top: -5px;
+    font-size: 20px;
+  }
+
+  #services .layanan {
+    width: 100%;
+    height: auto;
+    padding: 40px 8px 0 8px;
+    /* background-color: coral; */
+  }
+
+  #services .layanan .card-service {
+    width: 100%;
+    height: 100%;
+  }
+
+  #services .layanan .card-service .c-head {
+    width: 100%;
+    height: auto;
+  }
+
+  #services .layanan .card-service .c-head img {
+    object-fit: cover;
+    object-position: -40px 100%;
+  }
+
+  #services .layanan .card-service .c-body {
+    width: 100%;
+    height: 100%;
+    padding: 10px 20px 20px 20px !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    /* background-color: lightgreen; */
+  }
+
+  #services .layanan .card-service .c-body h3 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 26px;
+    margin: 12px 0 20px 0;
+  }
+
+  #services .layanan .card-service .c-body p {
+    line-height: 26px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  /* Works Style */
+  #works {
+    padding: 100px 0 50px 0;
+  }
+
+  #works .sm-center {
+    text-align: center !important;
+  }
+
+  #works .heading h2 {
+    font-size: 38px;
+  }
+
+  #works .heading p {
+    margin-top: -5px;
+    font-size: 20px;
+  }
+
+  #works .my-works .btn-cta {
+    padding: 14px 60px;
+    border: 1px solid var(--dark-100);
+    font-size: 16px;
+  }
+
+  #works .my-works .btn-cta:active {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  /* About Style */
+  #about {
+    padding: 80px 0;
+  }
+
+  #about .biography {
+    /* background-color: coral; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #about .bio-image {
+    width: 412px;
+    height: 412px;
+  }
+
+  #about .biography .bio-image img {
+    width: 480px;
+    object-fit: cover;
+    object-position: -48px -100px;
+  }
+
+  #about .biography .bio-text {
+    margin: 30px 0;
+  }
+
+  #about .biography .bio-text h3 {
+    font-size: 38px !important;
+    margin-bottom: 28px;
+  }
+
+  #about .biography .bio-text p {
+    max-width: 600px;
+    font-size: 26px;
+    line-height: 40px !important;
+  }
+
+  /* Contact Style */
+  #contact {
+    padding: 100px 0 50px 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/contact/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  #contact .sm-center {
+    text-align: center !important;
+  }
+  
+  #contact .heading h2 {
+    font-size: 38px;
+  }
+
+  #contact .heading p {
+    margin-top: -5px;
+    font-size: 20px;
+  }
+
+  #contact .card-contact {
+    width: 100%;
+    height: 100%;
+  }
+
+  #contact .card-contact .contact-item {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 0;
+    /* background-color: cyan; */
+  }
+
+  #contact .card-contact .contact-item h4 {
+    /* background-color: red; */
+    width: auto;
+    font-size: 16px;
+  }
+
+  #contact .card-contact .contact-item p {
+    text-align: justify;
+    font-size: 14px;
+  }
+
+  #contact .card-contact .contact-item p .links:active {
+    text-decoration: underline;
+  }
+
+  #contact .card-form {
+    height: 586px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 24px;
+    position: relative;
+  }
+
+  #contact .card-form .accent-pills {
+    width: 180px;
+    height: 50px;
+  }
+
+  #contact .card-form .accent-pills p {
+    line-height: 50px;
+    font-size: 14px;
+  }
+
+  #contact .card-form .custom-form {
+    width: 100%;
+    height: 100%;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+  }
+
+  #contact .card-form .custom-form .controlled-form {
+    width: 85%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    /* background-color: coral; */
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-label {
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-input {
+    padding: 20px;
+    font-size: 16px;
+    height: 48px;
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-textarea {
+    height: 138px;
+  }
+
+  #contact .card-form .custom-form .btn-kontak {
+    width: 45%;
+    font-size: 14px;
+    height: 42px;
+  }
+
+  #contact .card-form .custom-form .btn-kontak:active {
+    background-color: var(--dark-100);
+    transition: 0.3s all ease-in-out;
+  }
+}
 /* ASUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUu */
