--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -262,8 +262,14 @@
   #contact .heading p {
     text-align: center;
   }
-
   
+  #contact .card-contact {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    border-radius: 24px;
+  }
+
   #contact .card-contact .contact-item {
     flex-direction: column;
     align-items: flex-start;
@@ -481,7 +487,7 @@
   /* HERO */
   #hero .reversing {
     display: flex;
-    flex-direction: column-reverse !important;
+    flex-direction: column-reverse;
     /* background-color: red; */
   }
 
@@ -509,7 +515,7 @@
   }
 
   #hero .hero-text .btn-hubungi {
-    width: 60%;
+    width: 45%;
   }
 
   #hero .hero-banner {
@@ -524,7 +530,7 @@
 
   #hero .hero-banner img {
     /* background: #000; */
-    width: 400px;
+    width: 380px;
     object-position: center;
     object-fit: cover;
     position: absolute;
@@ -571,6 +577,13 @@
     height: 218px;
   }
 
+  #services .layanan .card-service .c-head img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
   #services .layanan .card-service .c-body {
     width: 100%;
     height: 100%;
@@ -585,13 +598,13 @@
   #services .layanan .card-service .c-body h3 {
     text-align: center;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 28px;
     margin: 12px 0 20px 0;
   }
 
   #services .layanan .card-service .c-body p {
     line-height: 26px;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
   }
 
